make sure .header__list is not covered by .header__branding

--- a/tempelhof/assets/scss/components/_header.scss
+++ b/tempelhof/assets/scss/components/_header.scss
@@ -33,6 +33,10 @@
     margin: 0;
     @include clearfix;
 
+    // make sure this is not covered by .header__branding
+    position: relative;
+    z-index: 2;
+
     @media (max-width: $breakpoint) {
         display: none;
 
